# TestEngine

./: .gitignore  .gitmodules  CMakeLists.txt  RunRel.cmd  build.cmd  buildPY.cmd  buildPython.py  buildRel.cmd  build_engine.py  cleanBuild.cmd  clearBinBuild.py
modules/: glwf.cmake
src/: CMakeLists.txt  TestEngine.sln  buildPremake.cmd  common.props  premake5.lua
src/Engine/: CMakeLists.txt  Engine.hpp  Engine.vcxproj  Engine.vcxproj.filters  test.cpp  test.hpp
src/Engine/Engine/: Application.hpp  EntryPoint.hpp
src/Engine/inc/: Application.hpp  Core.hpp  Engine.hpp  EntryPoint.hpp  Window.hpp
src/Engine/inc/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp
src/Engine/inc/Logger/: CConsoleLogger.hpp
src/Engine/inc/Platform/: WindowsWindow.hpp
src/Engine/private/: Application.cpp
src/Engine/private/Logger/: CConsoleLogger.cpp  CLogger.cpp  client.cpp
src/Engine/private/Platform/: WindowsWindow.cpp
src/EventDispatcher/: CMakeLists.txt  EventDispatcher.vcxproj  EventDispatcher.vcxproj.filters
src/EventDispatcher/inc/: Event.hpp  EventDispatcherAPI.hpp  MouseEvent.hpp
src/Logger/: CMakeLists.txt  Logger.vcxproj  Logger.vcxproj.filters
src/Logger/inc/: CConsoleLogger.hpp  CLogger.hpp  LoggerAPI.hpp  client.hpp
src/Logger/private/: CConsoleLogger.cpp  CLogger.cpp  client.cpp
src/Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  main.cpp
src/premake/: buildPremake.cmd  premake5.lua
