cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project (TestEngine LANGUAGES CXX)

include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_INSTALL_BINDIR})

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
# set(SOURCE_PRIVATE ${PROJECT_SOURCE_DIR}/private)

add_subdirectory(src)



message("SOURCES: ${SOURCES}")
message("PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")